--- a/frontend/fechas/index.html
+++ b/frontend/fechas/index.html
@@ -3,17 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <title>Formula 1</title>
 </head>
 <body>
+    <header class="container-fluid bg-danger d-flex">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
+                </a>
+            </div>
+        </nav>
+        <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Resultados
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="../fechas/?fecha=2024">2024</a>
+                          <a class="dropdown-item" href="../fechas/?fecha=2023">2023</a>
+                          <a class="dropdown-item" href="../fechas/?fecha=2022">2022</a>
+                        </div>
+                      </li>
+                      <li class="nav-item">
+                          <a id="pilotos-link" class="nav-link" href="../pilotos.html">Pilotos</a>
+                      </li>
+                      <li class="nav-item">
+                          <a id="escuderias-link" class="nav-link" href="../equipos.html">Equipos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a id="circuitos-link" class="nav-link" href="../circuitos.html">Circuitos</a>
+                      </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
     <h1>Fechas</h1>
-    <input type="button" value="Volver" onclick="history.back()"/>
-
     <ol id="lista" class="list-group"></ol>
-    
     </header>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script>
         
         function response_received(response) {
