--- a/frontend/pilotos.html
+++ b/frontend/pilotos.html
@@ -50,39 +50,49 @@
 </head>
 <body>
     <header class="container-fluid bg-danger d-flex">
-         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-             <div class="container">
-                 <a class="navbar-brand" href="index.html">
-                     <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
-                 </a>
-             </div>
-         </nav>
-         <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
-             <div class="container-fluid">
-                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                         <li class="nav-item">
-                             <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="fechas/index.html?fecha=2023">Resultados</a>
-                         </li>
-                         <li class="nav-item">
-                             <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
-                         </li>
-                         <li class="nav-item">
-                             <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
-                         </li>
-                     <li class="nav-item">
-                       <a class="nav-link" href="circuitos.html">Circuitos</a>
-                   </li>
-                 </ul>
-             </div>
-         </div>
-     </nav>
-    </header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
+                </a>
+            </div>
+        </nav>
+        <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Resultados
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="fechas/?fecha=2024">2024</a>
+                          <a class="dropdown-item" href="fechas/?fecha=2023">2023</a>
+                          <a class="dropdown-item" href="fechas/?fecha=2022">2022</a>
+                        </div>
+                      </li>
+                      <li class="nav-item">
+                          <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
+                      </li>
+                      <li class="nav-item">
+                          <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a id="circuitos-link" class="nav-link" href="circuitos.html">Circuitos</a>
+                      </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+</header>
     <div class="container my-4">
         <h1>Pilotos de Fórmula 1</h1>
         <div id="driver-list" class="row"></div>
     </div>
-
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script>
         function fetch_pilotos() {
             fetch("http://localhost:5000/pilotos")
