--- a/frontend/pilotos/editar/index.html
+++ b/frontend/pilotos/editar/index.html
@@ -39,9 +39,9 @@
                                 Resultados
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/fechas/tabla/2024/index.html?fecha=2024">2024</a>
-                                <a class="dropdown-item" href="/fechas/tabla/2023/index.html?fecha=2023">2023</a>
-                                <a class="dropdown-item" href="/fechas/tabla/2022/index.html?fecha=2022">2022</a>
+                                <a class="dropdown-item" href="../../fechas/index.html?fecha=2024">2024</a>
+                                <a class="dropdown-item" href="../../fechas/index.html?fecha=2023">2023</a>
+                                <a class="dropdown-item" href="../../fechas/index.html?fecha=2022">2022</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -224,6 +224,11 @@
                 .catch(error => console.error('Error al actualizar piloto:', error)); 
             }
         </script>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
         
 </body>
 
