--- a/frontend/pilotos.html
+++ b/frontend/pilotos.html
@@ -89,7 +89,7 @@
 
 </header>
     <div class="container my-4">
-         <h1>Pilotos de Fórmula 1 <div class="boton"><a href="añadirpiloto.html" class="btn btn-primary bg-danger">Agregar Piloto</a></div></h1>
+         <h1>Pilotos de Fórmula 1 <div class="boton"><a href="pilotoscreate.html" class="btn btn-primary bg-danger">Agregar Piloto</a></div></h1>
         <div id="driver-list" class="row"></div>
     </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
